--- a/templates/index.html
+++ b/templates/index.html
@@ -307,6 +307,8 @@
         </div>
     </div>
 
+    <p id="ping" class="ping"></p>
+
     <script src="{{ url_for('static', filename='js/custom-confirm.js') }}"></script>
     <script src="{{ url_for('static', filename='js/player-colors.js') }}"></script>
     <script src="{{ url_for('static', filename='js/game-settings.js') }}"></script>
@@ -321,7 +323,6 @@
     <script src="{{ url_for('static', filename='js/ui/modals/modal_general.js') }}"></script>
     <script src="{{ url_for('static', filename='js/ui/modals/modal_joingame.js') }}"></script>
     <script src="{{ url_for('static', filename='js/ui/modals/modal_creategame.js') }}"></script>
-
 
 </body>
 </html>
