--- a/templates/index.html
+++ b/templates/index.html
@@ -364,5 +364,6 @@
     <script src="{{ url_for('static', filename='js/ui/modals/modal_joingame.js') }}"></script>
     <script src="{{ url_for('static', filename='js/ui/modals/modal_creategame.js') }}"></script>
 
+    <script src="{{ url_for('static', filename='js/wakelock.js') }}"></script>
 </body>
 </html>
