--- a/static/css/user-settings.css
+++ b/static/css/user-settings.css
@@ -39,3 +39,17 @@
     transform: translateX(24px);
     background-color: #f39c12;
 }
+
+.volume-container {
+    width: 220px;
+    font-family: Arial, sans-serif;
+  }
+
+  .volume-value {
+    margin-top: 6px;
+    font-size: 14px;
+  }
+
+  input[type="range"] {
+    width: 100%;
+  }
