--- a/templates/index.html
+++ b/templates/index.html
@@ -252,8 +252,9 @@
                         </div>
 
                         <!-- Voting-Phase: Czar wählt Gewinner -->
-                        <div id="voting-phase" class="hidden">
+                        <div id="voting-phase" class="hidden czarvoting-endtimer">
                             <div id="voting-phase-title" class="phase-title">Wähle die beste Antwort!</div>
+                            <div style="height:10px; width:100%"></div>
                             <div id="answer-options-list" class="answer-options"></div>
                         </div>
 
@@ -268,10 +269,6 @@
                         <div id="result-phase" class="hidden">
                             <div class="result-banner">
                                 <h2 id="round-winner"></h2>
-                                <div class="winning-combination">
-                                    <div class="result-question" id="result-question"></div>
-                                    <div class="result-answers" id="result-answers"></div>
-                                </div>
                                 <p class="next-round-countdown">Nächste Runde in <span id="countdown-timer">5</span> Sekunden...</p>
                             </div>
                         </div>
