--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1075,6 +1075,7 @@ button {
 }
 
 .czarvoting-endtimer {
+    padding: 10px;
   border-radius: 15px;
   /* Trick: Ein kleinerer innerer Hintergrund überdeckt das Zentrum */
   background: 
