Add Reactions to czar-selection

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom-confirm.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/round-history.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/user-settings.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reactions.css') }}">
+    
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
 <body>
