--- a/static/css/style.css
+++ b/static/css/style.css
@@ -922,6 +922,8 @@ button {
     color: var(--color-optionslist);
     border-radius: 10px;
     padding: 25px;
+    padding-bottom: 10px;
+    padding-top: 15px;
     cursor: pointer;
     transition: all 0.3s;
 }
