--- a/static/css/style.css
+++ b/static/css/style.css
@@ -916,6 +916,12 @@ button {
     margin-bottom: 20px;
 }
 
+.not-resetted {
+    font-weight: bold;
+    border-color: #f4369e !important;
+    border-width: 4px !important;
+}
+
 .answer-option {
     background: var(--color-optionslist-bg);
     border: 3px solid var(--color-optionslist-border);
