--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/reactions.css') }}">
     
     <script src="{{ url_for('static', filename='js/socket.io.min-4.8.3.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.4/dist/confetti.browser.min.js"></script>
+    
 </head>
 <body>
     <!-- Login Screen -->
